add favicon + intro shortcode + change color

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -712,6 +712,7 @@ body {
   /* 1 */
   line-height: inherit;
   /* 2 */
+  /*background-color:#2B343E; */
   background-color:gainsboro;
   color: #f8a100;
 }
@@ -2614,6 +2615,33 @@ footer a:hover {
 
 .leading-none {
   line-height: 1;
+}
+.doSway {
+  animation: sway 0.34s infinite normal;
+  display: inline-block;
+}
+
+
+@keyframes sway {
+  0%,
+  100% {
+    transform: translate(0, 0) rotate(0deg) scale(1);
+  }
+  16.7% {
+    transform: translate(-0.5px, -0.5px) rotate(3deg);
+  }
+  33.4% {
+    transform: translate(-0.5px, 0.5px) rotate(-3deg);
+  }
+  50% {
+    transform: translate(0, 0) rotate(0deg) scale(1.1);
+  }
+  67.7% {
+    transform: translate(0.5px, -0.5px) rotate(-3deg);
+  }
+  84.4% {
+    transform: translate(0.5px, 0.5px) rotate(3deg);
+  }
 }
 
 .\!text-gray-200 {
