--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,3 +38,6 @@
   {{ partial "head/math" . }}
 {{- end }}
 {{ partial "head/jsonld" . }}
+
+<!--icons for Posts..toReview** as cannot be placed in local theme layout file...this base theme file have precedence! -->
+<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
